page shift bug fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11464,6 +11464,10 @@ a.text-dark:focus {
   height: auto;
 }
 
+.page-footer .row.foot {
+  width: 100%;
+}
+
 .page-footer .footer__navigation {
   text-align: center;
 }
