--- a/resources/sass/custom/_footer.scss
+++ b/resources/sass/custom/_footer.scss
@@ -10,6 +10,7 @@
             height: auto;
         }
     }
+    .row.foot{width: 100%;}
     .footer__navigation {
         text-align: center;
     }
